Revision history for DBIx::Class

    * New Features / Changes
        - New method ResultSource columns_info method, returning multiple
          pairs of column name/info at once
        - $rs->search now throws when called in void context, as it makes
          no sense (and is nearly always a sign of a bug/misdesign)
        - NULL is now supplied unquoted to all debug-objects, in order to
          differentiate between a real NULL and the string 'NULL'

    * Fixes
        - Fixed read-only attribute set attempt in ::Storage::Replicated
          (RT#62642)
        - Fix incomplete logic while detecting correct Oracle sequence
          on insert
        - Refactor handling of RDBMS-side values during insert() - fix
          regression of inserts into a Postgres / ::Replicated combination

0.08124 2010-10-28 14:23 (UTC)
    * New Features / Changes
        - Add new -ident "function" indicating rhs is a column name
          { col => { -ident => 'othercol' } } vs { col => \'othercol' }
        - Extend 'proxy' relationship attribute
        - Use DBIx::Class::Storage::Debug::PrettyPrint when the
          environment variable DBIC_TRACE_PROFILE is set, see
          DBIx::Class::Storage for more information
        - Implemented add_unique_constraints() which delegates to
          add_unique_constraint() as appropriate
        - add_unique_constraint() now poparly throws if called with
          multiple constraint definitions
        - No longer depend on SQL::Abstract::Limit - DBIC has been doing
          most of the heavy lifting for a while anyway
        - FilterColumn now passes data through when transformations
          are not specified rather than throwing an exception.
        - Optimized RowNum based Oracle limit-dialect (RT#61277)
        - Requesting a pager on a resultset with cached entries now
          throws an exception, instead of returning a 1-page object
          since the amount of rows is always equal to the "pagesize"