@@ -15,7 +15,7 @@ my $link_id = $link->id;
 ok $link->id;
 
 $link->delete;
-is $schema->resultset("Link")->search(id => $link_id)->count, 0,
+is $schema->resultset("Link")->search({id => $link_id})->count, 0,
     "link $link_id was deleted";
 
 # Get a fresh object with nothing cached
@@ -24,5 +24,5 @@ $bookmark = $schema->resultset("Bookmark")->find($bookmark->id);
 # This would create a new link row if none existed
 $bookmark->link;
 
-is $schema->resultset("Link")->search(id => $link_id)->count, 0,
+is $schema->resultset("Link")->search({id => $link_id})->count, 0,
     'accessor did not create a link object where there was none';
